# AVFFmpegLib

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/devyk/av/ffmpegcmd/: BaseActivity.kt  ClipActivity.kt  EditorActivity.kt  MainActivity.kt  MergeActivity.kt  VideoListsActivity.kt
app/src/main/java/com/devyk/av/ffmpegcmd/adapter/: ThumbnailAdapter.kt  VideoListsAdapter.kt
app/src/main/java/com/devyk/av/ffmpegcmd/entity/: VideoEntity.kt
app/src/main/java/com/devyk/av/ffmpegcmd/utils/: SpacingDecoration.kt  TimeUtil.kt
app/src/main/res/drawable/: ic_choose_close_selector.xml
app/src/main/res/layout/: activity_editor.xml  activity_main.xml  activity_merge.xml  adapter_video_lists.xml
app/src/main/res/values/: attrs.xml  colors.xml
app/src/test/java/com/devyk/av/ffmpegcmd/: ExampleUnitTest.kt
core/: build.gradle
core/src/androidTest/java/com/devyk/av/ffmpeg/core/: ExampleInstrumentedTest.java
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  ffmpeg-core.c  ffmpeg-core.h  ffmpeg_abidetect.c  ffmpeg_abidetect.h  ffmpeg_exception.c  ffmpeg_exception.h  ffmpeg_progress.c  ffmpeg_progress.h  ffprobe-core.c  ffprobe-core.h  fftools_cmdutils.c  fftools_ffmpeg.c  fftools_ffmpeg.h  fftools_ffprobe.c
core/src/main/java/com/devyk/ffmpeglib/: AVEditor.kt
core/src/main/java/com/devyk/ffmpeglib/async/: AsyncFFmpegExecuteTask.java
core/src/main/java/com/devyk/ffmpeglib/config/: Config.java
core/src/main/java/com/devyk/ffmpeglib/util/: VideoUitls.java
core/src/test/java/com/arthenica/mobileffmpeg/: ConfigTest.java  FFmpegTest.java
core/src/test/java/com/devyk/av/ffmpeg/core/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/androidTest/java/com/devyk/av/ffmpegcmd/: ExampleInstrumentedTest.kt
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/devyk/av/ffmpegcmd/: App.java  BaseActivity.kt  ClipActivity.kt  EditorActivity.kt  MainActivity.kt  MergeActivity.kt  VideoListsActivity.kt  WatermarkActivity.kt
sample/src/main/java/com/devyk/av/ffmpegcmd/adapter/: ThumbnailAdapter.kt  (+1 more)
sample/src/main/res/drawable/: video_duration_bg.xml
sample/src/main/res/layout/: activity_clip.xml  activity_editor.xml  activity_main.xml  activity_video_lists.xml  adapter_video_lists.xml
sample/src/main/res/values/: dimens.xml  strings.xml  styles.xml
shell/: build_fdkaac.sh  build_fdkaac_all.sh  build_ffmpeg.sh  build_ffmpeg_all.sh  build_ffmpeg_all_merge.sh  build_ffmpeg_merge.sh  build_freetype.sh  build_freetype_all.sh  build_lame.sh  build_openssl.sh  build_openssl_all.sh  build_x264.sh  build_x264_all.sh  config.sh
thirdparties/ffmpeg/include/: config.h
thirdparties/ffmpeg/include/libavcodec/: mathops.h
thirdparties/ffmpeg/include/libavformat/: network.h  os_support.h  url.h
thirdparties/ffmpeg/include/libavutil/: internal.h  libm.h  thread.h  timer.h
thirdparties/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
thirdparties/openssl/include/openssl/: opensslconf.h
(+5 files in other folders)
